--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "cross-env": "^7.0.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.27",
+    "@types/react": "18.2.66",
+    "typescript": "5.4.2"
   }
 }
