--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start:http2": "NODE_ENV=production node server.js",
+    "start:http1": "next start"
   },
   "dependencies": {
     "next": "latest",
